# elements

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html
2016.10.14/: air(576p_Theora).ogv  air(576p_VP8).webm  compass(576p_Theora).ogv  compass(576p_VP8).webm  fire(576p_Theora).ogv  fire(576p_VP8).webm  light(576p_Theora).ogv  light(576p_VP8).webm  liquid(576p_Theora).ogv  liquid(576p_VP8).webm  strange(576p_Theora).ogv  strange(576p_VP8).webm
assets/settings/effects/: blur.xml  gradient.xml  light_scattered.xml  tone.xml
assets/settings/experiments/air/: particles.xml  positions_product_process.xml  positions_product_reset.xml  velocities_product_process.xml  velocities_product_reset.xml
assets/settings/experiments/fire/: fire.xml  raymarching.xml
assets/settings/experiments/light/: occluding.xml  particles.xml  positions_product_process.xml  positions_product_reset.xml  velocities_product_process.xml
assets/settings/experiments/liquid/: liquid.xml  metaballs.xml  particles.xml  particles_ui.xml
assets/settings/experiments/strange/: particles.xml  positions_product_process.xml
assets/settings/primitives/: circle_color.xml  square_color.xml  square_texture.xml  square_texture_alpha.xml
assets/settings/techniques/: forward.xml  forward_ui.xml  geometry.xml  geometry_ui.xml  lpp.xml  lpp_geometry.xml  lpp_lighting.xml  lpp_lighting_stencil.xml  lpp_reconstruct.xml  lpp_ui.xml  projector.xml
assets/shaders/effects/: blur.prog  gradient.prog  light_scattered.prog  tone.prog
assets/shaders/experiments/air/: particles.prog  positions_product_process.prog  positions_product_reset.prog
assets/shaders/experiments/fire/: fire.prog  raymarching.desktop.prog  raymarching.prog
assets/shaders/experiments/light/: occluding.prog  particles.prog  positions_product_reset.prog  velocities_product_process.prog  velocities_product_reset.prog
assets/shaders/experiments/liquid/: liquid.prog  metaballs.prog  particles.prog
assets/shaders/experiments/strange/: particles.prog  positions_product_process.desktop.prog  positions_product_process.prog
assets/shaders/primitives/: circle_color.prog  square_color.prog  square_texture.prog  square_texture_alpha.prog
assets/shaders/techniques/: forward.prog  geometry.prog
elements/: Android.mk
elements/assets/: asset_blob.cpp  asset_model.cpp  asset_texture.cpp  assets.h  assets_storage.cpp
elements/io/: path.cpp  path.h
elements/math/: geometric.h  transform.h
elements/rendering/core/: buffer.h  opengl.h  texture_policy.h
elements/rendering/effects/: blend.cpp  blur.cpp  gradient.cpp  light_scattered.cpp  tone.cpp
elements/rendering/models/: model.h
elements/rendering/passes/: pass_target.cpp  pass_target_placement.cpp
elements/rendering/primitives/: icosphere.cpp
elements/rendering/techniques/: lpp_geometry_process.cpp  lpp_reconstruct_process.cpp
elements/rendering/utils/: program_loader.cpp  program_loader.h  versions_map.h
elements/scene/: scene.cpp
elements/scene/camera/: camera.cpp
elements/scene/modifier/: positioning.cpp
elements/simulation/liquid/: system.cpp  system.h
elements/ui/controls/: button.cpp  button.h  label.cpp  panel.cpp  slider.cpp
elements/ui/freetype/: manager.cpp  manager.h
elements/utils/std/: pointer.h  product.h
experiments/: Android.mk
experiments/air/: pass_particles.cpp  pass_positions.cpp  pass_velocities.cpp
experiments/compass/: arrow.cpp  arrow.h  drawableObject.cpp  drawableObject.h  renderer.cpp  renderer.h  rose.cpp  rose.h
experiments/fire/: pass_raymarching.cpp
experiments/strange/: pass_positions.cpp
platform/android/: input.h
platform/android/elements/: .gitignore  build.gradle  settings.gradle
platform/android/elements/AirWallpaper/: build.gradle
platform/android/elements/CharacterWallpaper/: build.gradle
platform/android/elements/CompassTool/: build.gradle
platform/android/elements/Demo/: build.gradle
platform/android/elements/FireWallpaper/: build.gradle
platform/android/elements/LightWallpaper/: build.gradle
platform/android/elements/LiquidWallpaper/: build.gradle
platform/android/elements/StrangeWallpaper/: build.gradle
platform/desktop/: Camera.h  CapsView.cpp  CapsView.h  DrawableUiGameComponent.cpp  DrawableUiGameComponent.h  Game.h  GameComponent.h  GameTime.cpp  PreferencesDataExtractor.py  Program.cpp  README.md  ReaderHelpers.cpp  ReaderHelpers.h  RenderDemo.cpp  RenderDemo.h  RenderingGame.cpp  RenderingGame.h  SliderModel.cpp  SliderModel.h  TestCard.cpp  TestCard.h  Ui.cpp  Ui.h  UiReader.cpp  UiReader.h  Utility.cpp  Utility.h  VectorHelper.h  Win32Controls.cpp  Win32Controls.h  asset_fs.cpp  asset_fs.h  checkbox.cpp  demo_generator.py  desktop_asset_reader.cpp  desktop_asset_reader.h  effect_generator.py  logging.h  main.cpp  metrics.cpp  (+6 more)
platform/desktop/air/: AirDemo.cpp  AirDemo.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
platform/desktop/android/: input.h
platform/desktop/character/: CharacterDemo.cpp  CharacterDemo.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
platform/desktop/compass/: CompassDemo.cpp  CompassDemo.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
platform/desktop/demo/: Demo.cpp  Demo.h  Program.cpp  RenderingGame.cpp
platform/desktop/effects/blur/: BlurControls.h  BlurDemo.cpp  BlurDemo.h  BlurEffect.cpp  BlurEffect.h  BlurSettings.cpp  BlurSettings.h  BlurUi.cpp  BlurUi.h  BlurVertex.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
platform/desktop/effects/gradient/: GradientMappingControls.h  (+10 more)
platform/desktop/fire/: FireDemo.cpp  FireDemo.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
platform/desktop/light/: LightDemo.cpp  LightDemo.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
platform/desktop/liquid/: LiquidDemo.cpp  LiquidDemo.h  Program.cpp  RenderingGame.cpp  RenderingGame.h
platform/desktop/strange/: Program.cpp  RenderingGame.cpp  RenderingGame.h  StrangeDemo.cpp  StrangeDemo.h
tests/program_data/: makefile  test_program_data.cpp
tests/program_loader/: asdasda_version.prog  makefile  test_program_loader.cpp
(+452 files in other folders)
